@@ -262,16 +262,7 @@ test wm-stackorder-4.4 {wm stackorder isabove|isbelow} {
 
 deleteWindows
 
-test wm-stackorder-5.1 {overrideredirect does not change stackorder} {
-    catch {destroy .t}
-    toplevel .t
-    wm overrideredirect .t 1
-    update
-    raise .
-    wm stackorder . isabove .t
-} {1}
-
-test wm-stackorder-5.2 {a menu is not a toplevel} {
+test wm-stackorder-5.1 {a menu is not a toplevel} {
     catch {destroy .t}
     toplevel .t
     menu .t.m -type menubar
@@ -281,6 +272,26 @@ test wm-stackorder-5.2 {a menu is not a toplevel} {
     raise .
     wm stackorder .
 } {.t .}
+
+test wm-stackorder-5.2 {A normal toplevel can't be
+        raised above an overrideredirect toplevel } {
+    catch {destroy .t}
+    toplevel .t
+    wm overrideredirect .t 1
+    raise .
+    update
+    wm stackorder . isabove .t
+} 0
+
+test wm-stackorder-5.3 {An overrideredirect window
+        can be explicitly lowered } {
+    catch {destroy .t}
+    toplevel .t
+    wm overrideredirect .t 1
+    lower .t
+    update
+    wm stackorder .t isbelow .
+} 1
 
 
 deleteWindows
